--- a/404.html
+++ b/404.html
@@ -1,24 +1,20 @@
 ---
-layout: default
 ---
+{% include header.html %}
+<div id="bg"></div>
+<div id="pagelanding" class="cf">
+    <div id="whoami">
+        <div id="namespace">
+                <h1 id="name"><a href="{{site.url}}">jelle dutry</a></h1>
+                <h2 id="title">motiondesigner</h2>
 
-<style type="text/css" media="screen">
-  .container {
-    margin: 10px auto;
-    max-width: 600px;
-    text-align: center;
-  }
-  h1 {
-    margin: 30px 0;
-    font-size: 4em;
-    line-height: 1;
-    letter-spacing: -1px;
-  }
-</style>
+        </div>
+        
+    </div>
 
-<div class="container">
-  <h1>404</h1>
-
-  <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
+  <!--<h1>404</h1>-->
+  <img class="page404" src="images/404.gif" alt="404 Page not found">
+  <!--<p><strong>Page not found :(</strong></p>
+  <p>The requested page could not be found.</p>-->
 </div>
+{% include footer.html%}
