--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -9,6 +9,8 @@ permalink: /contact/
     {% if site.data.settings.contact.description %}
       <p class="page-description">{{site.data.settings.contact.description}}</p>
     {% endif %}
+    <a>jelle.dutry<span style="display:none">foo</span>@g<span style="display:none">foo</span>mail.com</a>
+  
   </div>
   <form class="form" action="{% if site.data.settings.contact.email %}https://formspree.io/{{site.data.settings.contact.email}}{% else %}#{% endif %}" method="POST">
     <div class="form__group">
